# monte-carlo

./: CMakeLists.txt  README.md
.github/workflows/: monte_carlo_overbooking.yml
include/: utils.h
src/: main.cpp  utils.cpp
test/: mytest.cpp  test.cpp
